--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,12 @@
 {
     "env": {
         "browser": true,
-        "es6": true,
-        "jest": true
+        "es6": true
     },
     "extends": [
         "plugin:react/recommended",
         "airbnb",
-        "plugin:@typescript-eslint/recommended",
-        "react-hooks",
-        "prettier/@typescript-eslint",
-        "plugin:prettier/recommended"
+        "plugin:@typescript-eslint/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -26,26 +22,44 @@
     },
     "plugins": [
         "react",
-        "@typescript-eslint",
-        "prettier"
+        "react-hooks",
+        "@typescript-eslint"
     ],
     "rules": {
+        "react/jsx-indent-props": "off",
+        "react/jsx-indent": "off",
+        "indent": [
+            "error",
+            4,
+            {
+                "ignoredNodes": [
+                    "JSXElement *"
+                ]
+            }
+        ],
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
-        "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
+        "react/jsx-filename-extension": [
+            1,
+            {
+                "extensions": [
+                    ".tsx"
+                ]
+            }
+        ],
         "import/prefer-default-export": "off",
         "import/extensions": [
             "error",
             "ignorePackages",
             {
-              "ts": "never",
-              "tsx": "never"
+                "ts": "never",
+                "tsx": "never"
             }
-          ]
+        ]
     },
     "settings": {
         "import/resolver": {
-          "typescript": {}
+            "typescript": {}
         }
-      }
+    }
 }
