--- a/package.json
+++ b/package.json
@@ -1,76 +1,77 @@
 {
-  "name": "go-barber-front-end",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@hookform/resolvers": "^0.1.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/yup": "^0.29.4",
-    "axios": "^0.19.2",
-    "date-fns": "^2.16.0",
-    "polished": "^3.6.5",
-    "react": "^16.13.1",
-    "react-day-picker": "^7.4.8",
-    "react-dom": "^16.13.1",
-    "react-hook-form": "^6.3.1",
-    "react-icons": "^3.10.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.2",
-    "react-spring": "^8.0.27",
-    "styled-components": "^5.1.1",
-    "typescript": "~3.7.2",
-    "uuidv4": "^6.2.2",
-    "yup": "^0.29.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@testing-library/react-hooks": "^3.4.1",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/styled-components": "^5.1.2",
-    "@typescript-eslint/eslint-plugin": "^3.8.0",
-    "@typescript-eslint/parser": "^3.8.0",
-    "axios-mock-adapter": "^1.18.2",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-import-resolver-typescript": "^2.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.5",
-    "eslint-plugin-react-hooks": "^4.0.8",
-    "jest-environment-jsdom-sixteen": "^1.0.3",
-    "prettier": "^2.0.5",
-    "react-test-renderer": "^16.13.1"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/pages/**/*.tsx",
-      "src/components/**/*.tsx",
-      "src/hooks/*.tsx",
-      "!src/hooks/index.tsx"
-    ]
-  }
+    "name": "go-barber-front-end",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@hookform/resolvers": "^0.1.0",
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2",
+        "@types/jest": "^24.0.0",
+        "@types/node": "^12.0.0",
+        "@types/react": "^16.9.0",
+        "@types/react-dom": "^16.9.0",
+        "@types/yup": "^0.29.4",
+        "axios": "^0.19.2",
+        "date-fns": "^2.16.0",
+        "polished": "^3.6.5",
+        "react": "^16.13.1",
+        "react-day-picker": "^7.4.8",
+        "react-dom": "^16.13.1",
+        "react-hook-form": "^6.3.1",
+        "react-icons": "^3.10.0",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "^3.4.2",
+        "react-spring": "^8.0.27",
+        "styled-components": "^5.1.1",
+        "typescript": "~3.7.2",
+        "uuidv4": "^6.2.2",
+        "yup": "^0.29.3"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
+        "eject": "react-scripts eject"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@testing-library/react-hooks": "^3.4.1",
+        "@types/react-router-dom": "^5.1.5",
+        "@types/styled-components": "^5.1.2",
+        "@typescript-eslint/eslint-plugin": "^4.0.1",
+        "@typescript-eslint/parser": "^3.8.0",
+        "axios-mock-adapter": "^1.18.2",
+        "eslint": "^6.8.0",
+        "eslint-config-airbnb": "^18.2.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-import-resolver-typescript": "^2.2.0",
+        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-jsx-a11y": "^6.3.1",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-react": "^7.20.6",
+        "eslint-plugin-react-hooks": "^4.1.0",
+        "jest-environment-jsdom-sixteen": "^1.0.3",
+        "prettier": "^2.0.5",
+        "react-test-renderer": "^16.13.1"
+    },
+    "jest": {
+        "collectCoverageFrom": [
+            "src/pages/**/*.tsx",
+            "src/components/**/*.tsx",
+            "src/hooks/*.tsx",
+            "!src/hooks/index.tsx"
+        ]
+    }
 }
